# mac-wallpaper

./: README.md  package.json  setup.cfg  setup.py
mac_wallpaper/: __init__.py  __main__.py
scripts/: .wallpaper.applescript  wallpaper
tests/mac-wallpaper/examples/: cli.sh  get.py  wallpaper.sh
tests/mac-wallpaper/examples/files/: solid.py
tests/mac-wallpaper/examples/functions/update/: dark.py  white.py
tests/mac-wallpaper/examples/update/: dark.py  white.py
