# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-wallpaper
version = 2019.4.18
url = https://github.com/looking-for-a-job/mac-wallpaper.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wallpaper

[options]
install_requires = 
	applescript
	click
	public
	setuptools
scripts = 
	scripts/.wallpaper.applescript
	scripts/wallpaper
packages = 
	mac_wallpaper
