# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-wallpaper
version = 2019.5.6
url = https://github.com/looking-for-a-job/mac-wallpaper
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wallpaper

[options]
install_requires = 
	mac_wallpaper
	setuptools
scripts = 
	scripts/.wallpaper.applescript
	scripts/wallpaper
